[gd_scene load_steps=2 format=3 uid="uid://b51qinbvc777l"]

[ext_resource type="Script" uid="uid://b23jqn7iyxkki" path="res://scenes/UI/commands/executions/variable_update.gd" id="1_3a48y"]

[node name="VariableUpdate" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_3a48y")

[node name="VarTarget" type="LineEdit" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = " = "

[node name="VarExpression" type="LineEdit" parent="."]
layout_mode = 2

[connection signal="text_changed" from="VarTarget" to="." method="_on_var_target_text_changed"]
[connection signal="text_changed" from="VarExpression" to="." method="_on_var_expression_text_changed"]
